# dbcutoff

./: .gitignore  CHANGELOG.md  Makefile  README.md  SPECIFICATION.md  bench_runner.py  bench_viz.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  viz_common.py
.streamlit/: config.toml  style.css
cli/: run.py
connectors/: base.py  couchdb.py  duckdb.py  mongodb.py  mysql.py  postgres.py
data/: results.db
loaders/: insee_loader.py
pages/: 0_Synthèse.py  1_Écriture.py  2_Lecture.py  3_Vectoriel.py
sidecar/: schema.graphql
sidecar/postgres/: config.py  main.py  schema.py
storage/: db_store.py  results.db
test_server/: loader.py  main.py  runner.py  storage.py
test_server/tests/: relational.py  universal.py
