[project]
name = "dbcutoff"
version = "1.0.0"
description = "DB Benchmarker — comparaison de performances multi-SGBD"
authors = [
    {name = "Thierry HUET",email = "thierry.huet@aperto-nota.fr"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "fastparquet (>=2026.3.0,<2027.0.0)",
    # Sidecar
    "strawberry-graphql[fastapi] (>=0.260.0,<1.0.0)",
    "uvicorn (>=0.34.0,<1.0.0)",
    "asyncpg (>=0.30.0,<1.0.0)",
    "psycopg[binary] (>=3.2.0,<4.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    # Serveur de test
    "flask (>=3.1.0,<4.0.0)",
    "gql[httpx] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    # Stockage résultats
    "aiosqlite (>=0.21.0,<1.0.0)",
    # CLI
    "click (>=8.1.0,<9.0.0)",
    # Streamlit
    "streamlit (>=1.45.0,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
